Add logger levels
